# kasari

./: README.md
blheli_s/: BLHeli_kasari1 - A_H_70 - Rev. 16.7 - Multi_250613.ini  BLHeli_kasari1 - A_H_70 - Rev. 16.7 - Multi_250730_3.ini
cad/: kasari1.FCStd
kasarisw/: .gitignore  Cargo.toml  README.md  README.txt  export-esp.sh
kasarisw/src/: embedded.rs  lib.rs  main.rs  sensors.rs  shared.rs  simulator.rs
kasarisw/src/shared/: algorithm.rs  flip_detector.rs  mod.rs
kasarisw/src/simulator/: app.rs  events.rs  mod.rs  physics.rs  sources.rs
kasarisw/tools/: accel_counter.py  algorithm.py  analyze_flip.py  combat_wizard.py  download_events.py  event_monitor.py  lidar_event_stats.py  parse_events.py  simulator.py
tools/lidar/: plot_decode.py  plot_decode_persistence.py  plot_decode_persistence_fast.py  plot_decode_persistence_lines.py
tools/lidar/logs/: 2025-05-28_rotation_sensor_pulseview.csv  2025-05-28_rotation_sensor_pulseview.pvs  2025-05-28_rotation_sensor_pulseview.sr  2025-05-28_sensor_data_pulseview.pvs  2025-05-28_sensor_data_pulseview.sr
